# Loggy-Discord-Bot

./: Link to project  bot.html  csv_dispatch_event_log.csv  log_types.txt  logging.txt  main.py  old_stuff.txt  one_of_each_log.txt  permanant_log_file.txt  problem_log.txt  pyproject.toml
bot/: __init__.py  bot.py  index.html  keep_alive.py
consumer/: consume_logs.py
html/: bot.html  log_format.html
html/bot/: bot.html  keep_alive.html
log_format/: log_format.py
logger/: logger.py
producer/: produce_logs.py
test/: test_bot.py
