[tool.poetry]
name = "repl_python3_Hertz-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
bs4 = "^0.0.1"
yfinance = "^0.1.60"
pdoc3 = "^0.10.0"
Flask-AutoIndex = "^0.6.6"
inspect2 = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
